Use AlbumPointer for storing SAlbums

BUG: 166484

svn path=/trunk/extragear/graphics/digikam/; revision=838093